Rework GetPolls filtering
